# rune

./: .commitlintrc.json  .dockerignore  .gitignore  .markdownlint.json  .npmrc  .oxlintrc.json  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .releaserc.json  .secrets.baseline  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose-qdrant.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  test_auto_reindex.sh  test_docker.sh  test_multi_word_search.sh  test_semantic.rs  test_standalone.sh
.github/workflows/: docker-publish.yml  release.yml
docker/: start-mcp.sh
docker/configs/: claude-code.json  claude-desktop.json  continue-mcp.json  cursor-mcp.json  vscode-settings.json  windsurf-mcp.json
docker/s6-services/qdrant/: run
docker/s6-services/rune/: run
mcp-server/: jest.config.js  package.json  tsconfig.json
mcp-server/__mocks__/: nativeModule.js
mcp-server/scripts/: postinstall.js
mcp-server/src/: bridge.ts  index.ts
mcp-server/src/__tests__/: bridge.test.ts  protocol.test.ts
rune-bridge/: Cargo.toml  package.json
rune-bridge/src/: lib.rs
rune-core/: Cargo.toml
rune-core/benches/: embedding_bench.rs  hybrid_bench.rs  indexing_bench.rs  search_bench.rs  simple_storage_bench.rs  storage_bench.rs  utils.rs
rune-core/src/: error.rs  lib.rs  test_utils.rs
rune-core/src/cache/: mod.rs
rune-core/src/embedding/: ast_chunker.rs  chunker.rs  generator.rs  mod.rs  model_manager.rs  qdrant.rs  quantization.rs
rune-core/src/indexing/: file_walker.rs  language_detector.rs  mod.rs  symbol_extractor.rs  tantivy_indexer.rs
rune-core/src/search/: fuzzy_match.rs  hybrid.rs  literal.rs  literal_test.rs  mod.rs  query_parser.rs  regex.rs  regex_test.rs  semantic.rs  symbol.rs
rune-core/src/storage/: mod.rs
rune-core/tests/: semantic_search_integration.rs
test-fixtures/edge-cases/: empty.rs  unicode.py
test-fixtures/languages/: sample.py  sample.rs  sample.ts
test_workspace/: authentication.js  caching_system.rs  data_structures.rs  database_operations.py  file_operations.go  machine_learning.py  math_operations.py  network_client.go  semantic_result.json  string_utils.js  test_ports.yml  test_semantic.sh
