[workspace]
resolver = "2"
members = [
    "rune-core",
    "rune-bridge",
]

[workspace.package]
version = "0.1.0"
authors = ["Rune Contributors"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/yourusername/rune"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Search & Indexing
tantivy = "0.22"
regex = "1.10"

# AST Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# Vector operations
ndarray = "0.16"

# Storage
rocksdb = "0.22"

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Git integration
git2 = "0.19"

# Utils
dashmap = "6.0"
parking_lot = "0.12"
rayon = "1.10"
once_cell = "1.19"
indexmap = "2.2"

# Testing
mockall = "0.13"
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[profile.bench]
inherits = "release"