[workspace]
resolver = "2"
members = ["rune-core", "rune-bridge"]

[workspace.package]
version = "1.2.0"
authors = ["Varun Kamath"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/varunkamath/rune"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Search & Indexing
tantivy = "0.25"
regex = "1.12"

# AST Parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# Vector operations - must match ort's ndarray version
ndarray = "0.16"

# Storage
rocksdb = "0.24"

# File watching
notify = "8.2"
notify-debouncer-full = "0.6"

# Git integration
git2 = "0.20"

# Utils
dashmap = "6.1"
parking_lot = "0.12"
rayon = "1.11"
once_cell = "1.21"
indexmap = "2.12"

# Testing
mockall = "0.14"
proptest = "1.9"
criterion = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[profile.bench]
inherits = "release"
