[package]
name = "rune-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core functionality
rune-core = { path = "../rune-core" }

# NAPI-RS for Node.js bindings
napi = { version = "2", features = ["async", "tokio_rt", "napi9", "serde-json"] }
napi-derive = "2"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
napi-build = "2"

