[package]
name = "rune-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core functionality
rune-core = { path = "../rune-core" }

# NAPI-RS for Node.js bindings
napi = { version = "1.0.0"] }
napi-derive = "3"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System
libc = "0.2"

[build-dependencies]
napi-build = "2"
