[package]
name = "rune-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Search & Indexing
tantivy = { workspace = true }
regex = { workspace = true }

# AST Parsing
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-cpp = { workspace = true }
streaming-iterator = "0.1"

# Vector operations
ndarray = { workspace = true }

# Storage
rocksdb = { workspace = true }

# File watching
notify = { workspace = true }
notify-debouncer-full = { workspace = true }

# Git integration
git2 = { workspace = true }

# Utils
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
once_cell = { workspace = true }
indexmap = { workspace = true }

# Additional dependencies for rune-core
walkdir = "2.5"
ignore = "0.4"  # gitignore-aware file traversal
blake3 = "1.5"  # fast hashing
uuid = { version = "1.11", features = ["v4"] }  # UUID generation
lru = "0.16"
bytes = "1.7"
futures = "0.3"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["json", "stream"] }

# Vector database
qdrant-client = { version = "1.12", optional = true }

# Embedding support
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "ndarray"], optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.10"
pretty_assertions = "1.4"

[features]
default = ["semantic"]
semantic = ["qdrant-client", "embeddings"]
embeddings = ["ort", "tokenizers", "dirs"]
